infrastructure/configs/envoy-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dns-gateway
  namespace: kube-system
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: dns-nodeport
  listeners:
  - allowedRoutes:
      kinds:
      - kind: TCPRoute
    name: dns-tcp
    port: 53
    protocol: TCP
  - allowedRoutes:
      kinds:
      - kind: UDPRoute
    name: dns-udp
    port: 53
    protocol: UDP
